Cannot delete last line of Mail Message https://bugs.webkit.org/show_bug.cgi?id=213536 <rdar://problem/63420928>

Reviewed by Wenson Hsieh.

Source/WebCore:

LayoutTests/editing/deleting/smart-delete-paragraph-005.html

The smart paragraph deletion code did not take into account that
the previous blank line could be the start of editable content without
a paragraph before it. If this was the case, the deletion code backed up
too far, and the delete command failed. This case should be handled
in the same way that the deleting the last paragraph in editable content is
handled, by checking if we are already at the beginning of the editable
content when expanding the selection for smart paragraph deletion.

* editing/DeleteSelectionCommand.cpp:
(WebCore::DeleteSelectionCommand::smartDeleteParagraphSpacers):

LayoutTests:

* editing/deleting/smart-delete-paragraph-005.html:


Canonical link: https://commits.webkit.org/226411@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263528 268f45cc-cd09-0410-ab3c-d52691b4dbfc